docs/-/v2/pages/home.mdx
---
title: "Overview"
description: "Live Log Insight – An intelligent agent system for automated log analysis, anomaly detection, and actionable insights generation."
---

import { LogoCarousel } from '/snippets/LogoCarousel.jsx';

:::info Looking for the Non-CLI version?
This version includes CLI support with interactive prompts and animations. If you prefer using the Python pipeline directly without the CLI, switch to the [Non-CLI version](/-/v1/pages/home).
:::

# Live Log Insight

An intelligent agent skills system that analyzes logs, detects anomalies, and produces actionable insights — using composable skills, not monolithic prompts.

## Powered By

<LogoCarousel />

## What is Live Log Insight?

Live Log Insight is a modular Agent Skills system designed for automated log analysis. It orchestrates specialized skills to transform raw logs into meaningful insights for operators and developers. Unlike traditional monitoring tools, it uses an AI-powered pipeline that can understand context, detect anomalies, and suggest actions.

## Key Features

- **🔍 Automated Discovery**: Automatically identifies log sources across environments
- **📊 Intelligent Parsing**: Normalizes diverse log formats into structured events
- **📈 Pattern Recognition**: Aggregates logs to identify trends and metrics
- **🚨 Anomaly Detection**: Detects spikes, new errors, and unusual behavior
- **💡 Root Cause Analysis**: Generates plausible hypotheses for detected issues
- **📝 Actionable Summaries**: Produces clear, human-readable reports
- **✅ Smart Recommendations**: Suggests concrete next steps for operators

## Architecture

The system follows a sequential pipeline workflow:


<div className="flex justify-center items-center my-8">
  <div className="max-w-4xl">
    <img 
      className="block dark:hidden workflow-image"
      src="/assets/images/add_ins/workflow/workflow-light.png" 
      alt="Live Log Insight Workflow"
    />
    <img 
      className="hidden dark:block workflow-image"
      src="/assets/images/add_ins/workflow/workflow-dark.png" 
      alt="Live Log Insight Workflow"
    />
  </div>
</div>

Each stage is implemented as a modular skill, making the system flexible and extensible.

## When to Use

Activate Live Log Insight when:
- User requests log analysis or system health insights
- Daily/weekly operational summaries are needed
- Investigating incidents, spikes, or unusual behavior
- Monitoring production or staging systems
- Troubleshooting application errors

## Quick Example

### Interactive CLI Mode

```bash
# Enter interactive CLI mode (default)
uv run run_cli.py

# Or use the -i flag
uv run run_cli.py -i
```

This will show an interactive menu with options to:
- View system status
- Run log analysis
- Perform quick health checks
- Discover log sources
- Export results
- Run analysis wizard
- And more...

### Direct Command Mode

```bash
# Run a complete log analysis pipeline
uv run run_cli.py analyze

# Show system status
uv run run_cli.py status

# Quick health check
uv run run_cli.py quickcheck

# Discover log sources
uv run run_cli.py discover

# Export results
uv run run_cli.py export --format json

# Run analysis wizard
uv run run_cli.py wizard
```

### Available CLI Commands

| Command | Description |
|---------|-------------|
| `status` | Show system status and configuration |
| `analyze` | Run the complete log analysis pipeline |
| `quickcheck` | Quick health check |
| `discover` | Discover available log sources |
| `export` | Export results (json/yaml/markdown) |
| `wizard` | Interactive analysis wizard |
| `verify` | Verify installation and dependencies |
| `demo-prompts` | Demonstrate interactive prompts |

The pipeline will:
1. Discover available log sources
2. Fetch logs from the specified time range
3. Parse and normalize log entries
4. Aggregate metrics and patterns
5. Detect anomalies
6. Generate hypotheses (optional)
7. Create a summary report
8. Recommend next steps

## Supported Log Sources

- **Filesystem**: `/var/log` and custom paths
- **Elasticsearch**: Index-based log retrieval
- **Custom sources**: Extensible via configuration

## Output Formats

| Output | Description | Location |
|--------|-------------|----------|
| `summary.md` | Human-readable analysis report | `output/summary.md` |
| `anomalies.json` | Detected issues with evidence | `output/anomalies.json` |
| `recommendations.json` | Prioritized action items | `output/recommendations.json` |
| `metrics.json` | Aggregated statistics | `output/metrics.json` |
| `hypotheses.json` | Root cause hypotheses | `output/hypotheses.json` |

## Get Started

<CardGroup cols={3}>
  <Card
    title="Quickstart"
    icon="rocket"
    href="./quickstart"
  >
    Get up and running in 5 minutes.
  </Card>
  <Card
    title="Non-CLI Version"
    icon="code"
    href="../v1/pages/home"
  >
    Switch to non-CLI pipeline version.
  </Card>
  <Card
    title="Core Concepts"
    icon="book"
    href="./concepts/architecture"
  >
    Learn about the system architecture.
  </Card>
  <Card
    title="Skills Reference"
    icon="cubes"
    href="./skills/livelogs-insights"
  >
    Explore all available skills.
  </Card>
  <Card
    title="Examples"
    icon="code"
    href="./examples/daily-health-check"
  >
    See real-world usage examples.
  </Card>
  <Card
    title="Configuration"
    icon="sliders"
    href="./configuration/log-sources"
  >
    Configure log sources and thresholds.
  </Card>
  <Card
    title="API Reference"
    icon="plug"
    href="./api/pipeline"
  >
    Integrate with your own tools.
  </Card>
</CardGroup>

## Project Structure

```
live-log-insight/
├── .agents/
│   ├── AGENTS.md              # Agent orchestration instructions
│   └── skills/
│       ├── livelogs_insights/     # Orchestration skill
│       ├── logsource_discovery/   # Log source discovery
│       ├── fetch_logs/            # Log retrieval
│       ├── parse_logs/            # Log normalization
│       ├── aggregate_logs/        # Metrics computation
│       ├── detect_anomalies/      # Anomaly detection
│       ├── high_hypothesis/       # Root cause analysis
│       ├── generate_summary/      # Report generation
│       └── recommend_actions/     # Action recommendations
├── src/agentX/                  # Python source code
│   ├── config/                  # Configuration modules
│   ├── pipeline/                # Pipeline orchestration
│   └── shared/                 # Shared utilities
├── config/                      # Configuration files
├── metadata/                    # Sample data for testing
├── output/                      # Generated outputs
└── docs/                        # Documentation
```

## License

Apache-2.0
